# kafka-trident

./: Cargo.toml  application.conf  docker-compose.yml
src/: main.rs
src/config/: conf.rs  reference.conf
src/kafka/: consumer.rs  source.rs
tests/: mapper.conf
