[package]
name = "kafka-trident"
version = "0.1.0"
edition = "2021"

[dependencies]
rdkafka = { version = "0.29.0", features = ["cmake-build"] }
serde = "1.0.152"
hocon = "0.9.0"

log = "0.4.8"
tokio = { version = "1.24.2", features = ["rt", "time"], optional = true }

[dev-dependencies]
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread", "time", "rt"] }

[features]
default = ["tokio"]